--- a/appointment/src/main/resources/application.yaml
+++ b/appointment/src/main/resources/application.yaml
@@ -17,6 +17,6 @@ spring:
       path: /h2-console
 jwt:
   private:
-    key: classpath:app.key
+    key: "classpath:app.key"
   public:
-    key: classpath:app.pub
+    key: "classpath:app.pub"
